<resources>
    <string name="app_name">Riengo</string>
    <string name="list_bells">My Bells</string>
    <string name="new_bell">Create Bell</string>
    <string name="bell_name_label">Bell name:</string>
    <string name="expires_in_label">Expires in:</string>
    <string name="hours">hours</string>
    <string name="create_bell">Create Bell</string>
    <string name="new_bell_name">Your new bell is called:</string>
    <string name="and_has">and has</string>
    <string name="hours_left">hours left.</string>
    <string name="welcome_to_riengo">Welcome to Riengo</string>
    <string name="choose_what_you_want_to_do_label">Choose what you want to do:</string>
    <string name="share_your_bell">Share your bell</string>
    <string name="classic_bell">Classic bell</string>
    <string name="facebook_app_id">1964071173619633</string>
    <string name="fb_login_protocol_scheme">fb1964071173619633</string>
    <string name="someone_is_ringing">Someone is at your door</string>
    <string name="expires">Expires?</string>
    <string name="loading_bells">Loading Bells...</string>

</resources>
