<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.riengo.main.activities.CreateBellActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <LinearLayout
        android:id="@+id/bigLinear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bell_name_text"
                android:labelFor="@+id/bell_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bell_name_label"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/bell_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <Switch
            android:id="@+id/switchexpires"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/expires" />


        <LinearLayout
            android:id="@+id/expireBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/expires_in"
                android:labelFor="@+id/hours_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/expires_in_label"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/hours_left"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/hours_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hours"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/create_bell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="createBell"
            android:text="@string/create_bell"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
